PIRANHA-2113 bug-fix, overlapping joyent logo

--- a/site/apps/main/static/css/main.css
+++ b/site/apps/main/static/css/main.css
@@ -51,6 +51,11 @@ body {
     background-color: #fff;
 }
 
+.navbar-fixed-top,
+.navbar-fixed-bottom {
+    z-index: 99999;
+}
+
 h1, h2 {
     font-weight: normal;
 }
